# app-api-py

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 12e63ddaf60b_.py  6b79b34cce1a_init.py  c6a412c97b29_init.py  e8dd00b51c0e_init.py
db/: Dockerfile  create.sql
notebooks/: age_estimation.ipynb  age_estimation_v2.ipynb  age_estimation_v3.ipynb  face_detection.ipynb  foo.ipynb
src/: config.py  crud.py  database.py  db.py  main.py
src/api/: command.py  file.py  instruction.py  ping.py  post.py  user.py
src/api/ws/: connection_manager.py  websocket_route.py
src/database/: redis.py
src/infra/: db.py  redis.py
src/mappers/: post.py  user.py
src/models/: __init__.py  base.py  post.py  user.py
src/schemas/: auth.py  base.py  instruction.py  post.py  user.py
src/services/: age_estimator.py  auth.py  crud.py  instruction_manager.py  redis.py
src/utils/: files.py  guards.py  model_trainer.py  strings.py
