[tool.poetry]
name = "app-api-py"
version = "0.1.0"
description = ""
authors = ["danilichev <v.danilichev@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
alembic = "^1.13.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
fastapi = "^0.110.0"
fastapi-cache2 = {git = "https://github.com/yoco-tech/fastapi-cache.git",  rev = "main"}
passlib = "^1.7.4"
pydantic = {version = "^2.6.4", extras = ["email"]}
pydantic-settings = "^2.2.1"
pyjwt = "^2.8.0"
python = "^3.10"
python-dotenv = "^1.0.1"
redis = "^5.0.7"
sqlalchemy = "^2.0.28"
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
